# gemma-translate

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  FAQ.md  LICENSE  README.md  compose.example.yml
cli/: translate
docker/: entrypoint.sh
installer/: Cargo.toml
installer/src/: main.rs
server/: install.sh  manage.sh  requirements.txt  server.py  shim.py
systemd/: translate.service
