[package]
name = "gemma-translate"
version = "0.2.0"
edition = "2021"
description = "gemma-translate installer/manager CLI (27B-IT only)"

[[bin]]
name = "gemma-translate"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
